--- a/crop/templates/base.html
+++ b/crop/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +25,6 @@
 <body>
     <!-- ======= Header ======= -->
   <header id="header" class="header py-4 fixed-top d-flex align-items-center">
-
     <div class="container-fluid">
       <div class="row align-items-center py-3 px-xl-5">
           <div class="col-lg-3 d-none d-lg-block">
@@ -34,9 +34,9 @@
 
           </div>
           <div class="col-lg-6 col-6 text-left">
-              <form action="">
+              <form action="login/" method="get">
                   <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search for products">
+                      <input type="text" class="form-control" placeholder="Search for products" name="searching">
                       <div class="input-group-append">
                           <span class="input-group-text bg-transparent text-primary">
                               <i class="fa fa-search"></i>
@@ -47,7 +47,7 @@
               </form>
           </div>
           <div class="col-lg-3 col-6 text-right">
-            <i class="fa-solid fa-user"></i> <span>D.Hydromel</span>
+            <i class="fa-solid fa-user"></i> <span>{{ request.user.username }}</span>
           </div>
       </div>
   </div>
@@ -69,13 +69,6 @@
         <a class="nav-link collapsed" href="index.html">
           <i class="fa-solid fa-square-nfi"></i>
           <span>Products</span>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="index.html">
-          <i class="fa-solid fa-message"></i>
-          <span>Messages</span>
         </a>
       </li>
 
