--- a/crop/templates/dashboard.html
+++ b/crop/templates/dashboard.html
@@ -35,8 +35,8 @@
                       <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>145</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+                      <h6>{{ sales[0] }}</h6>
+                      <span class="text-success small pt-1 fw-bold">{{ sales[1] }}%</span> <span class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
                   </div>
@@ -70,8 +70,8 @@
                       <i class="fa-solid fa-dollar-sign"></i></i>
                     </div>
                     <div class="ps-3">
-                      <h6>$3,264</h6>
-                      <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+                      <h6>${{ revenue[0] }}</h6>
+                      <span class="text-success small pt-1 fw-bold">{{ revenue[1] }}%</span> <span class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
                   </div>
@@ -106,8 +106,8 @@
                       <i class="fa-solid fa-users"></i></i>
                     </div>
                     <div class="ps-3">
-                      <h6>1244</h6>
-                      <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
+                      <h6>{{ cust[0] }}</h6>
+                      <span class="text-danger small pt-1 fw-bold">{{ cust[1] }}%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
 
                     </div>
                   </div>
