--- a/crop/templates/profil.html
+++ b/crop/templates/profil.html
@@ -173,6 +173,14 @@
                       </div>
                     </div>
                     {% endif %}
+                    {% if request.user.status == 'client' %}
+                    <div class="row mb-3">
+                      <label for="Address" class="col-md-4 col-lg-3 col-form-label">Job</label>
+                      <div class="col-md-8 col-lg-9">
+                        <input name="job" type="text" class="form-control" id="job" value="{{ request.trader.job }}">
+                      </div>
+                    </div>
+                    {% endif %}
 
                     <div class="text-center">
                       <button type="submit" class="btn btn-primary">Save Changes</button>
