--- a/crop/templates/index.html
+++ b/crop/templates/index.html
@@ -44,7 +44,7 @@
               </form>
           </div>
           <div class="col-lg-3 col-6 text-right">
-              <a href="/connect/" class="btn text-white bg-primary border">
+              <a href="connect" class="btn text-white bg-primary border">
                   Login/Register
               </a>
 
