first round complete ==> all

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -32,7 +32,7 @@
           
                           <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                          <form class="mx-1 mx-md-4" action="{% url 'signup' %}" method="post">
+                          <form class="mx-1 mx-md-4" action="{% url 'signup' %}" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ from.as_p }}
                             <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
