--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -31,15 +31,13 @@
             <div class="card-body pt-3">
               <!-- Bordered Tabs -->
               <ul class="nav nav-tabs nav-tabs-bordered">
-
                 <li class="nav-item">
                   <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
                 </li>
 
                 <li class="nav-item">
-                  <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Change Password</button>
+                  <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
                 </li>
-
               </ul>
               <div class="tab-content pt-2">
 
@@ -92,7 +90,7 @@
                     {% if request.user.is_client %}
                     <div class="col-lg-9 col-md-8">Client</div>
                     {% else %}
-                    <div class="col-lg-9 col-md-8">Provider</div>
+                    <div class="col-lg-9 col-md-8">Professional</div>
                     {% endif %}
                   </div><br>
                 </div>
@@ -103,143 +101,18 @@
                     <form action="{% url 'profile' %}" method="post">
                         {% csrf_token %}
                       <div class="row mb-3">
-                      <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
-                      <div class="col-md-8 col-lg-9">
-                        <img src="{{ request.user.picture.url }}" alt="Profile">
-                        <div class="pt-2">
-                          <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="fa-solid fa-upload"></i></a>
-                          <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="fa-solid fa-trash"></i></a>
+                        <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
+                        <div class="col-md-8 col-lg-9">
+                          <img src="{{ request.user.picture.url }}" alt="Profile">
                         </div>
                       </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="fullName" class="col-md-4 col-lg-3 col-form-label">First Name</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="fullName" type="text" class="form-control" id="fullName" value="{{ request.user.first_name }}" name="first_name">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Last Name</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="fullName" type="text" class="form-control" id="fullName" value="{{ request.user.last_name }}" name="last_name">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Username</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="fullName" type="text" class="form-control" id="fullName" value="{{ request.user.username }}" name="username">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="email" type="email" class="form-control" id="Email" value="{{ request.user.email }}" name="email">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="address" type="text" class="form-control" id="Address" value="{{ request.user.address }}" name="address">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="Address" class="col-md-4 col-lg-3 col-form-label">Country</label>
-                      <select class="form-select col-md-8 col-lg-9" aria-label="Default select example" name="country">
-                        {% for obj in country %}
-                        {%if obj[0] == request.user.country %}
-                        <option selected value="{{ obj[0] }}">{{ obj[1] }}</option>
-                        {% else %}
-                        <option selected value="{{ obj[0] }}">{{ obj[1] }}</option>
-                        {% endif %}
-                        {% enfor %}
-                      </select>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="Address" class="col-md-4 col-lg-3 col-form-label">State</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="address" type="text" class="form-control" id="Address" value="{{ request.user.state }}" name="state">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="Address" class="col-md-4 col-lg-3 col-form-label">Sexe</label>
-                      <select class="form-select col-md-8 col-lg-9" aria-label="Default select example" name="sexe">
-                        {% for obj in sexe %}
-                        {%if obj[0] == request.user.sexe %}
-                        <option selected value="{{ obj[0] }}">{{ obj[1] }}</option>
-                        {% else %}
-                        <option selected value="{{ obj[0] }}">{{ obj[1] }}</option>
-                        {% endif %}
-                        {% enfor %}
-                      </select>
-                    </div>
-                    
-                    <div class="row mb-3">
-                      <label for="company" class="col-md-4 col-lg-3 col-form-label">
-                        {% if request.user.is_client %}
-                          switch to a professional account
-                        {% else %}
-                          switch to customer account
-                        {% endif %}
-                      </label>
-                      <!-- Default checkbox -->
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox"  id="flexCheckDefault" {% if request.user.is_client %}checked{% endif %} name="is_client">
-                        <label class="form-check-label" for="flexCheckDefault">customer account</label>
-                      </div>
-
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox"  id="flexCheckDefault" {% if request.user.is_provider %}checked{% endif %} name="is_provider">
-                        <label class="form-check-label" for="flexCheckDefault">professional account</label>
-                      </div>
-                    </div>
-
+                      {{ form.as_p }}
                       <div class="text-center">
                         <button type="submit" class="btn btn-primary">Save Changes</button>
                       </div>
                     </form><!-- End Profile Edit Form -->
   
                 </div>
-
-                <div class="tab-pane fade pt-3" id="profile-change-password">
-                  <!-- Change Password Form -->
-                  <form>
-                    {% csrf_token %}
-                    <div class="row mb-3">
-                      <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="password" type="password" class="form-control" id="currentPassword" name="old_password">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="newpassword" type="password" class="form-control" id="newPassword" name="new_password">
-                      </div>
-                    </div>
-
-                    <div class="row mb-3">
-                      <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Re-enter New Password</label>
-                      <div class="col-md-8 col-lg-9">
-                        <input name="renewpassword" type="password" class="form-control" id="renewPassword" name="confirm_password">
-                      </div>
-                    </div>
-
-                    <div class="text-center">
-                      <button type="submit" class="btn btn-primary">Change Password</button>
-                    </div>
-                  </form><!-- End Change Password Form -->
-
-                </div>
-
               </div><!-- End Bordered Tabs -->
 
             </div>
@@ -248,6 +121,6 @@
         </div>
 {% endblock %}
 {% block ender %}
-<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 {% endblock %}
 
