--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
           <div class="col-lg-6 col-6 text-left">
               <form>
                   <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search for products" name="searching">
+                      <input type="text" class="form-control" placeholder="Search for products" name="search">
                       <div class="input-group-append">
                           <span class="input-group-text bg-transparent text-primary">
                               <i class="fa fa-search"></i>
