--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -38,6 +38,10 @@
                 <li class="nav-item">
                   <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
                 </li>
+
+                <li class="nav-item">
+                  <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">add a payment method</button>
+                </li>
               </ul>
               <div class="tab-content pt-2">
 
@@ -113,8 +117,19 @@
                     </form><!-- End Profile Edit Form -->
   
                 </div>
-              </div><!-- End Bordered Tabs -->
 
+                <div class="tab-pane fade pt-3" id="profile-change-password">
+                  <!-- Change Password Form -->
+                  <form action="{% url 'payment' %}" method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <div class="text-center">
+                      <button type="submit" class="btn btn-primary">Change Password</button>
+                    </div>
+                  </form><!-- End Change Password Form -->
+
+                </div>
+              </div><!-- End Bordered Tabs -->
             </div>
           </div>
 
