--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,6 +31,7 @@
                         <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
           
                           <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                          <h3>{{ error }}</h3>
 
                           <form class="mx-1 mx-md-4" action="{% url 'signup' %}" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
